# SimulatingEVDemand

./: .gitignore  Auxillary_functions.py  Data_loader.py  EDA_NTS.ipynb  EDA_elec_ch_analysis.ipynb  MobilitySimulatorDev.py  MobilitySimulatorUser.py  Mobility_simulator.py  ReadMe.md  Showcase_1.0.1.ipynb  environment.yaml  exploration.ipynb  omod.ipynb  pyproject.toml  rough.ipynb  showcase.ipynb
Agents/: agents.pkl  agents1000.pkl  by_trip_df.pkl  by_trip_df200.pkl  sim_times.pkl  sim_times200.pkl
EVforecaster/: EVforecaster.py  EVforecasterUser.py  StatisticalTesting.py  charging_logic.py  charging_logic_auxillary.py  config.py  data_loaders.py  demand_curves.py  pilots.py
EVforecasterModules/: StatisticalTesting.py  pilots.py
Modules/: agents.py  cleaning.py  pipelines.py
