[build-system]
requires = ["setuptools", "wheel"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "EVforecaster"
version = "0.0.1"
description = "A Python package for EVforc, an EV charging demand forecasting tool."
readme = "ReadMe.md"
requires-python = ">=3.12"


# Runtime dependencies
dependencies = [
  "scikit-learn",
  "matplotlib",
  "numpy",
  "ipykernel",
  "pandas",
]

[tool.setuptools]
packages = ["EVforecaster"] 